--- a/index.html
+++ b/index.html
@@ -46,5 +46,39 @@
 
   </header>
 
+  <main class="container">
+
+    <section class="riquadro quadro1">
+      <div class="immagine"></div>
+      <div class="testo"></div>
+    </section>
+
+    <section class="riquadro quadro2">
+      <div class="immagine"></div>
+      <div class="testo"></div>
+    </section>
+
+    <section class="riquadro quadro3">
+      <div class="immagine"></div>
+      <div class="testo"></div>
+    </section>
+
+    <section class="mini-riquadro mini1">
+      
+    </section>
+    
+    <section class="riquadro quadro4">
+      immagine
+    </section>
+
+    <section class="mini-riquadro mini1">
+
+    </section>
+
+
+
+
+  </main>
+
 </body>
 </html>
