--- a/index.html
+++ b/index.html
@@ -82,10 +82,20 @@
   <footer>
     
     <div class="liste">
+      <div class="colonne-liste"></div>
+      <div class="colonne-liste"></div>
+      <div class="colonne-liste"></div>
+      <div class="colonne-liste"></div>
+      <div class="colonne-liste"></div>
 
     </div>
 
-    
+    <div class="piede">
+      <div class="logo">
+        Logo
+      </div>
+      <Button>Schiaccia</Button>
+    </div>
   </footer>
 
 </body>
